Test SonarQ ifnot rollback