@@ -2,7 +2,8 @@ package predictions.dapp.service;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import net.bytebuddy.implementation.bytecode.Throw;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import predictions.dapp.model.Consultas;
@@ -13,6 +14,12 @@ import java.util.*;
 
 @Service
 public class PredictionService {
+
+    private static final Logger logger = LoggerFactory.getLogger(PredictionService.class);
+    private static final String PERCENTAGE_FORMAT = "%.2f%%";
+    private static final String POINTS_KEY = "points";
+    private static final String POSITION_KEY = "position";
+    private static final String GOAL_DIFFERENCE_KEY = "goalDifference";
 
     private final FootballDataService footballDataService;
     private final ConsultasRepository consultasRepository;
@@ -26,7 +33,7 @@ public class PredictionService {
 
     @Transactional
     public Map<String, Object> predictWinner(String teamId1, String teamId2, Long userId)
-            throws Exception {
+            throws IOException, InterruptedException {
 
         // Obtener estadísticas de ambos equipos
         TeamStats stats1 = getTeamStats(teamId1);
@@ -47,17 +54,17 @@ public class PredictionService {
 
         // Crear respuesta
         Map<String, Object> response = new LinkedHashMap<>();
-        response.put("probabilidad_" + stats1.teamName, String.format("%.2f%%", prob1));
-        response.put("probabilidad_" + stats2.teamName, String.format("%.2f%%", prob2));
-        response.put("prediction", winner + " con " + String.format("%.2f%%", winnerProb));
+        response.put("probabilidad_" + stats1.teamName, String.format(PERCENTAGE_FORMAT, prob1));
+        response.put("probabilidad_" + stats2.teamName, String.format(PERCENTAGE_FORMAT, prob2));
+        response.put("prediction", winner + " con " + String.format(PERCENTAGE_FORMAT, winnerProb));
 
-        // Guardar en BD (siempre hay userId aquí porque el controller lo valida)
+        // Guardar en BD
         savePrediction(userId, response);
 
         return response;
     }
 
-    private TeamStats getTeamStats(String teamId) throws Exception {
+    private TeamStats getTeamStats(String teamId) throws IOException, InterruptedException {
         TeamStats stats = new TeamStats();
 
         // 1. Obtener últimos 10 partidos ganados y goles
@@ -68,76 +75,79 @@ public class PredictionService {
         Set<String> leagues = getUniqueLeagues(lastMatches);
 
         // 3. Para cada liga, obtener standings
+        StandingsData standingsData = processLeagueStandings(leagues, teamId);
+
+        stats.totalPoints = standingsData.totalPoints;
+        stats.avgPosition = standingsData.avgPosition;
+        stats.totalGoalDiff = standingsData.totalGoalDiff;
+        stats.leagueCount = standingsData.leagueCount;
+
+        return stats;
+    }
+
+    private StandingsData processLeagueStandings(Set<String> leagues, String teamId)
+            throws IOException, InterruptedException {
         int totalPoints = 0;
         int totalPosition = 0;
         int totalGoalDiff = 0;
         int leagueCount = 0;
 
         for (String leagueName : leagues) {
-            try {
-                // Obtener ID de la competición
-                String competitionId = getCompetitionId(leagueName);
-                if (competitionId != null) {
-                    // Obtener standings
-                    JsonNode standings = footballDataService.getStandings(competitionId);
-                    Map<String, Object> teamStanding = extractTeamStanding(standings, teamId);
-
-                    if (teamStanding != null) {
-                        totalPoints += (int) teamStanding.get("points");
-                        totalPosition += (int) teamStanding.get("position");
-                        totalGoalDiff += (int) teamStanding.get("goalDifference");
-                        leagueCount++;
-                    }
-                }
-            } catch (Exception e) {
-                throw new Exception("The temas were not found");
+            StandingResult result = processLeagueStanding(leagueName, teamId);
+            if (result.found) {
+                totalPoints += result.points;
+                totalPosition += result.position;
+                totalGoalDiff += result.goalDifference;
+                leagueCount++;
             }
         }
 
-        stats.totalPoints = leagueCount > 0 ? totalPoints : 0;
-        stats.avgPosition = leagueCount > 0 ? (double) totalPosition / leagueCount : 20;
-        stats.totalGoalDiff = totalGoalDiff;
-        stats.leagueCount = leagueCount;
+        double avgPosition = leagueCount > 0 ? (double) totalPosition / leagueCount : 20;
+        return new StandingsData(totalPoints, avgPosition, totalGoalDiff, leagueCount);
+    }
 
-        return stats;
+    private StandingResult processLeagueStanding(String leagueName, String teamId)
+            throws IOException, InterruptedException {
+        try {
+            String competitionId = getCompetitionId(leagueName);
+            if (competitionId != null) {
+                JsonNode standings = footballDataService.getStandings(competitionId);
+                Map<String, Object> teamStanding = extractTeamStanding(standings, teamId);
+
+                if (teamStanding != null) {
+                    return new StandingResult(
+                            true,
+                            (int) teamStanding.get(POINTS_KEY),
+                            (int) teamStanding.get(POSITION_KEY),
+                            (int) teamStanding.get(GOAL_DIFFERENCE_KEY)
+                    );
+                }
+            }
+        } catch (IOException | InterruptedException e) {
+            logger.error("Error obteniendo standings para {}", leagueName, e);
+            throw e;
+        }
+        return new StandingResult(false, 0, 0, 0);
     }
 
     private void calculateWinsAndGoals(JsonNode matchesResponse, String teamId, TeamStats stats) {
         JsonNode matches = matchesResponse.get("matches");
-        if (matches == null || !matches.isArray()) return;
+        if (matches == null || !matches.isArray()) {
+            return;
+        }
 
         int wonGames = 0;
         int totalGoals = 0;
         String teamName = "";
 
         for (JsonNode match : matches) {
-            JsonNode score = match.get("score");
-            String winner = score.path("winner").asText("");
-            JsonNode fullTime = score.get("fullTime");
-            if (fullTime == null || score == null) continue;
-
-            int homeGoals = fullTime.path("home").asInt(0);
-            int awayGoals = fullTime.path("away").asInt(0);
-
-            // Determinar si este equipo ganó
-            JsonNode homeTeam = match.path("homeTeam");
-            JsonNode awayTeam = match.path("awayTeam");
-
-            boolean isHomeTeam = homeTeam.path("id").asText("").equals(teamId);
-            boolean isAwayTeam = awayTeam.path("id").asText("").equals(teamId);
-
-            if (isHomeTeam) {
-                teamName = homeTeam.path("name").asText("");
-                if ("HOME_TEAM".equals(winner)) wonGames++;
-            } else if (isAwayTeam) {
-                teamName = awayTeam.path("name").asText("");
-                if ("AWAY_TEAM".equals(winner)) wonGames++;
+            MatchResult result = processMatch(match, teamId);
+            if (result.teamName != null && !result.teamName.isEmpty()) {
+                teamName = result.teamName;
             }
-
-            // Solo contar goles si el equipo ganó
-            if ((isHomeTeam && "HOME_TEAM".equals(winner)) ||
-                    (isAwayTeam && "AWAY_TEAM".equals(winner))) {
-                totalGoals += homeGoals + awayGoals;
+            if (result.won) {
+                wonGames++;
+                totalGoals += result.goals;
             }
         }
 
@@ -146,10 +156,54 @@ public class PredictionService {
         stats.goalQuantity = totalGoals;
     }
 
+    private MatchResult processMatch(JsonNode match, String teamId) {
+        JsonNode score = match.get("score");
+        if (score == null) {
+            return new MatchResult(null, false, 0);
+        }
+
+        String winner = score.path("winner").asText("");
+        JsonNode fullTime = score.get("fullTime");
+        if (fullTime == null) {
+            return new MatchResult(null, false, 0);
+        }
+
+        int homeGoals = fullTime.path("home").asInt(0);
+        int awayGoals = fullTime.path("away").asInt(0);
+
+        JsonNode homeTeam = match.path("homeTeam");
+        JsonNode awayTeam = match.path("awayTeam");
+
+        boolean isHomeTeam = homeTeam.path("id").asText("").equals(teamId);
+        boolean isAwayTeam = awayTeam.path("id").asText("").equals(teamId);
+
+        String teamName = null;
+        boolean won = false;
+        int goals = 0;
+
+        if (isHomeTeam) {
+            teamName = homeTeam.path("name").asText("");
+            won = "HOME_TEAM".equals(winner);
+            if (won) {
+                goals = homeGoals + awayGoals;
+            }
+        } else if (isAwayTeam) {
+            teamName = awayTeam.path("name").asText("");
+            won = "AWAY_TEAM".equals(winner);
+            if (won) {
+                goals = homeGoals + awayGoals;
+            }
+        }
+
+        return new MatchResult(teamName, won, goals);
+    }
+
     private Set<String> getUniqueLeagues(JsonNode matchesResponse) {
         Set<String> leagues = new HashSet<>();
         JsonNode matches = matchesResponse.get("matches");
-        if (matches == null || !matches.isArray()) return leagues;
+        if (matches == null || !matches.isArray()) {
+            return leagues;
+        }
 
         for (JsonNode match : matches) {
             String leagueName = match.path("competition").path("name").asText("");
@@ -164,7 +218,9 @@ public class PredictionService {
         JsonNode competitions = footballDataService.getCompetitions();
         JsonNode competitionsList = competitions.get("competitions");
 
-        if (competitionsList == null || !competitionsList.isArray()) return null;
+        if (competitionsList == null || !competitionsList.isArray()) {
+            return null;
+        }
 
         for (JsonNode comp : competitionsList) {
             if (leagueName.equals(comp.path("name").asText(""))) {
@@ -176,17 +232,21 @@ public class PredictionService {
 
     private Map<String, Object> extractTeamStanding(JsonNode standingsResponse, String teamId) {
         JsonNode standings = standingsResponse.get("standings");
-        if (standings == null || !standings.isArray() || standings.size() == 0) return Collections.emptyMap();
+        if (standings == null || !standings.isArray() || standings.isEmpty()) {
+            return Collections.emptyMap();
+        }
 
         JsonNode table = standings.get(0).get("table");
-        if (table == null || !table.isArray()) return Collections.emptyMap();
+        if (table == null || !table.isArray()) {
+            return Collections.emptyMap();
+        }
 
         for (JsonNode entry : table) {
             if (teamId.equals(entry.path("team").path("id").asText(""))) {
                 Map<String, Object> result = new HashMap<>();
-                result.put("position", entry.path("position").asInt(0));
-                result.put("points", entry.path("points").asInt(0));
-                result.put("goalDifference", entry.path("goalDifference").asInt(0));
+                result.put(POSITION_KEY, entry.path(POSITION_KEY).asInt(0));
+                result.put(POINTS_KEY, entry.path(POINTS_KEY).asInt(0));
+                result.put(GOAL_DIFFERENCE_KEY, entry.path(GOAL_DIFFERENCE_KEY).asInt(0));
                 return result;
             }
         }
@@ -195,11 +255,11 @@ public class PredictionService {
 
     private double calculateProbability(TeamStats stats) {
         // Fórmula de probabilidad basada en múltiples factores
-        double winRate = stats.wonGames * 10.0; // Máximo 100 puntos (10 victorias)
-        double goalScore = Math.min(stats.goalQuantity * 2.0, 100); // Máximo 100 puntos
-        double pointsScore = Math.min(stats.totalPoints * 2.0, 100); // Máximo 100 puntos
-        double positionScore = Math.max(0, 100 - (stats.avgPosition * 5)); // Mejor posición = más puntos
-        double goalDiffScore = Math.min(Math.max(stats.totalGoalDiff * 3, 0), 100); // Máximo 100 puntos
+        double winRate = stats.wonGames * 10.0;
+        double goalScore = Math.min(stats.goalQuantity * 2.0, 100);
+        double pointsScore = Math.min(stats.totalPoints * 2.0, 100);
+        double positionScore = Math.max(0, 100 - (stats.avgPosition * 5));
+        double goalDiffScore = Math.clamp(stats.totalGoalDiff * 3.0, 0, 100);
 
         // Pesos para cada factor
         double probability = (winRate * 0.30) +
@@ -208,10 +268,14 @@ public class PredictionService {
                 (positionScore * 0.15) +
                 (goalDiffScore * 0.10);
 
-        return Math.max(probability, 1.0); // Mínimo 1% de probabilidad
+        return Math.max(probability, 1.0);
     }
 
     private void savePrediction(Long userId, Map<String, Object> prediction) {
+        savePredictionData(userId, prediction);
+    }
+
+    private void savePredictionData(Long userId, Map<String, Object> prediction) {
         try {
             Consultas consulta = consultasRepository.findByUserId(userId)
                     .orElse(new Consultas());
@@ -221,18 +285,7 @@ public class PredictionService {
             }
 
             // Obtener predicciones existentes
-            String existingPredictions = consulta.getPredicciones();
-            List<Map<String, Object>> predictionsList = new ArrayList<>();
-
-            if (existingPredictions != null && !existingPredictions.isEmpty()
-                    && !existingPredictions.equals("Predictions logged in")) {
-                    JsonNode existing = mapper.readTree(existingPredictions);
-                    if (existing.isArray()) {
-                        for (JsonNode node : existing) {
-                            predictionsList.add(mapper.convertValue(node, Map.class));
-                        }
-                    }
-            }
+            List<Map<String, Object>> predictionsList = getExistingPredictions(consulta);
 
             // Agregar nueva predicción con timestamp
             Map<String, Object> predictionWithTime = new LinkedHashMap<>(prediction);
@@ -244,11 +297,31 @@ public class PredictionService {
             consultasRepository.save(consulta);
 
         } catch (Exception e) {
-            System.err.println("Error guardando predicción: " + e.getMessage());
+            logger.error("Error guardando predicción", e);
         }
     }
 
-    // Clase interna para estadísticas del equipo
+    private List<Map<String, Object>> getExistingPredictions(Consultas consulta) {
+        List<Map<String, Object>> predictionsList = new ArrayList<>();
+        String existingPredictions = consulta.getPredicciones();
+
+        if (existingPredictions != null && !existingPredictions.isEmpty()
+                && !"Predictions logged in".equals(existingPredictions)) {
+            try {
+                JsonNode existing = mapper.readTree(existingPredictions);
+                if (existing.isArray()) {
+                    for (JsonNode node : existing) {
+                        predictionsList.add(mapper.convertValue(node, Map.class));
+                    }
+                }
+            } catch (Exception e) {
+                logger.warn("Could not parse existing predictions", e);
+            }
+        }
+        return predictionsList;
+    }
+
+    // Helper classes
     private static class TeamStats {
         String teamName = "";
         int wonGames = 0;
@@ -257,5 +330,45 @@ public class PredictionService {
         double avgPosition = 20.0;
         int totalGoalDiff = 0;
         int leagueCount = 0;
+    }
+
+    private static class StandingsData {
+        final int totalPoints;
+        final double avgPosition;
+        final int totalGoalDiff;
+        final int leagueCount;
+
+        StandingsData(int totalPoints, double avgPosition, int totalGoalDiff, int leagueCount) {
+            this.totalPoints = totalPoints;
+            this.avgPosition = avgPosition;
+            this.totalGoalDiff = totalGoalDiff;
+            this.leagueCount = leagueCount;
+        }
+    }
+
+    private static class StandingResult {
+        final boolean found;
+        final int points;
+        final int position;
+        final int goalDifference;
+
+        StandingResult(boolean found, int points, int position, int goalDifference) {
+            this.found = found;
+            this.points = points;
+            this.position = position;
+            this.goalDifference = goalDifference;
+        }
+    }
+
+    private static class MatchResult {
+        final String teamName;
+        final boolean won;
+        final int goals;
+
+        MatchResult(String teamName, boolean won, int goals) {
+            this.teamName = teamName;
+            this.won = won;
+            this.goals = goals;
+        }
     }
 }
